# michot_marefiya_backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_CONTRACT_CHANGELOG.md  CODEBASE_MAP.md  GAP_ANALYSIS.md  LICENSE  PRD.md  PRD_COVERAGE_AUDIT.md  README.md  SchemaError.md  backend.diff  celerybeat-schedule-shm  celerybeat-schedule-wal  compose.prod.yaml  compose.yaml  conftest.py  hotels_data.json  main.py  pyproject.toml  pytest.ini  schema.yaml  schema_output.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  qa_task.md
.github/workflows/: pipeline.yml  weekly_report.yml
apps/account/: admin.py  enums.py  filters.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/analytics/: apps.py  models.py  serializers.py  services.py  services_frontdesk.py  signals.py  tasks.py  urls.py  views.py
apps/core/: admin.py  enums.py  models.py  pagination.py  rate_data.json  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/favorites/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/listing/: admin.py  admin_terms.py  apps.py  exceptions.py  filters.py  maps_urls.py  maps_views.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
docs/: model_design.md
requirements/: base.txt  dev.txt
scripts/: gh_report.py  load_secrets.sh  test_sms.py
services/: __init__.py  maps.py  sms.py
tests/: __init__.py  conftest.py
(+249 files in other folders)
